Try to resolve issue with content overflowing.

--- a/alpha/stylesheets/style.css
+++ b/alpha/stylesheets/style.css
@@ -69,6 +69,10 @@ nav.topnav .icon {
         flex-direction: column;
     }
     nav.topnav.responsive > ul > li {display: block;}
+
+    .main-content > div {
+        width: 100%;
+     }
   }
 
 
